# oops

./: Cargo.toml  IMPLEMENTAZIONI.md  README.md  ROADMAP.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
core/: Cargo.toml
core/src/: azioni.rs  blame.rs  commit.rs  conflitti.rs  contenuto.rs  diff.rs  esegui.rs  insights.rs  lib.rs  model.rs  panoramica.rs  patch.rs  rami.rs  rebase_int.rs  reflog.rs  remote.rs  repo.rs  stage.rs  stash.rs  storage.rs  submoduli.rs  tag.rs  worktree.rs
packaging/: PKGBUILD  oops.desktop
src/: App.svelte  app.css  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: Avvio.svelte  BarraLaterale.svelte  BarraStat.svelte  Blame.svelte  Conflitti.svelte  Credenziali.svelte  Cronologia.svelte  Dashboard.svelte  Diff.svelte  GitFlow.svelte  Impostazioni.svelte  Insights.svelte  MergeEditor.svelte  Modifiche.svelte  RebaseInterattivo.svelte  Ricerca.svelte  Terminale.svelte  Timeline.svelte
src/lib/: api.js  stato.svelte.js  util.js  versione.js
