[package]
name = "oops"
version = "0.5.0"
description = "Oops - un'interfaccia grafica moderna per Git"
authors = ["Antonio Russo"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "oops_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# La logica vera (Git) vive nel crate "core".
oops-core = { path = "../core" }
# Osserva i cambiamenti sul filesystem per aggiornare la UI da solo.
notify = "6"
